# emboss

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: release.yml
emboss/: __init__.py  _cached.py  _cli.py  _fanout_cache.py  _file_cache.py  _log_cache.py  _protocol.py  _sqlite_cache.py  _transfer.py
odic/: __init__.py  _cached.py
scripts/: bench.py
tests/: test_async.py  test_cached.py  test_cli.py  test_encoder.py  test_fanout_cache.py  test_file_cache.py  test_keying.py  test_log_cache.py  test_log_cache_replicated.py  test_migration.py  test_protocol.py  test_sqlite_cache.py  test_transfer.py
