[project]
name = "emboss"
version = "0.6.1"
authors = [
    { name="Daniel Hails", email="emboss@hails.info" },
]
description = "On-Disk Input-keyed Cache — disk-backed memoization with pydantic-aware encoding"
requires-python = ">=3.10"
dynamic = ["dependencies", "readme"]

[project.optional-dependencies]
pydantic = ["pydantic>=2"]
diskcache = ["diskcache>=5"]  # use diskcache.Cache as a backend (no longer required)
dev = ["pytest", "pydantic>=2", "diskcache>=5"]

[project.scripts]
emboss = "emboss._cli:main"

[project.urls]
"Homepage" = "https://github.com/DJRHails/emboss"
"Bug Tracker" = "https://github.com/DJRHails/emboss/issues"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
readme = {file = ["README.md"], content-type = "text/markdown"}

[tool.setuptools.packages]
find = {}

[tool.bumpver]
current_version = "0.6.1"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message = "bump version {old_version} -> {new_version}"
commit = true
tag = true
push = true

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    'current_version = "{version}"',
    'version = "{version}"',
]
"emboss/__init__.py" = [
    '__version__ = "{version}"',
]
"README.md" = [
    "{version}",
]
